🐛 (style) error de tipeo para instalar
requirements estaba en nivel superior al notebook

--- a/notebooks/c22-29-ft-data-bi.qmd
+++ b/notebooks/c22-29-ft-data-bi.qmd
@@ -14,9 +14,10 @@ os.cpu_count()
 ```
 
 ```{python}
-%pip install -r requirements.txt
+%pip install -r ../requirements.txt
 # por si no anda este descomentar el de abajo
 #!pip install -r requirements.txt
+# o pip install -r ../requirements.txt
 ```
 
 ```{python}
